@@ -1,3 +1,5 @@
+# charset
+$charset = 'EUC-JP';
 
 # Buffer selection mode
 
